--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://mmm.github.io
+url: http://markmims.com
 title: Snippets, Thoughts, and Links
 subtitle: ... chaotic bits of my distributed hybrid associative memory
 author: Mark Mims
