--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,12 @@
 
 url: http://markmims.com
 title: Software, Physics, Data, Mountains
-subtitle: ...snippets from my distributed hybrid associative memory
+#subtitle: ...snippets from my distributed hybrid associative memory
+#subtitle: ...random stuff in my tech notebook
+#subtitle: ...and other random stuff
+#subtitle: ...and other miscellaneous ramblings
+#subtitle: ...and other seemingly random associations
+subtitle: ...and other random associations
 author: Mark M Mims, Ph.D.
 simple_search: http://google.com/search
 description: where DevOps meets Data Science
