--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,8 @@ markdown: kramdown
 pygments: false # default python pygments have been replaced by pygments.rb
 category_feeds: true
 
+sidebar: collapse
+
 paginate: 10          # Posts per page on the blog index
 pagination_dir: blog  # Directory base for pagination URLs eg. /blog/page/2/
 recent_posts: 5       # Posts in the sidebar Recent Posts section
