--- a/_config.yml
+++ b/_config.yml
@@ -95,8 +95,8 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name: markmims
-disqus_show_comment_count: false
+#disqus_short_name: markmims
+#disqus_show_comment_count: false
 
 # Google Analytics
 google_analytics_tracking_id: UA-4132881-1
