fonts and licensing

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,8 @@ title: Software, Physics, Data, Mountains
 #subtitle: ...and other miscellaneous ramblings
 #subtitle: ...and other seemingly random associations
 subtitle: ...and other random associations
-author: Mark M Mims, Ph.D.
+#author: Mark M Mims, Ph.D.
+author: Mark Mims
 simple_search: http://google.com/search
 description: where DevOps meets Data Science
 
